# advent-of-code

./: .gitignore  .justfile  .typos.toml  README.md  cabal.project  default.nix
2024/: README.md  advent-of-code.cabal
2024/app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Util.hs
AoC_2024/: README.md
AoC_2024/AoC_2024_01/: Main.hs
AoC_2024/AoC_2024_02/: Main.hs
AoC_2024/AoC_2024_03/: Main.hs
AoC_2024/AoC_2024_04/: Main.hs
AoC_2024/AoC_2024_05/: Main.hs
AoC_2024/AoC_2024_06/: Main.hs
AoC_2024/AoC_2024_07/: Main.hs
AoC_2024/AoC_2024_08/: Main.hs
AoC_2024/AoC_2024_09/: Main.hs
AoC_2024/AoC_2024_10/: Main.hs
AoC_2024/AoC_2024_11/: Main.hs
AoC_2024/AoC_2024_12/: Main.hs
AoC_2024/AoC_2024_13/: Main.hs
AoC_2024/AoC_2024_14/: Main.hs
AoC_2024/AoC_2024_15/: Main.hs
AoC_2024/AoC_2024_16/: Main.hs
AoC_2024/AoC_2024_17/: Main.hs
AoC_2024/AoC_2024_18/: Main.hs
AoC_2024/AoC_2024_19/: Main.hs
AoC_2024/AoC_2024_20/: Main.hs
